@@ -3,6 +3,9 @@ plugins {
     id 'application'
     id 'com.adarshr.test-logger' version '4.0.0'
     id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'org.beryx.jlink' version '2.24.4'
+
 }
 
 repositories {
@@ -56,7 +59,13 @@ sourceSets {
 
 dependencies {
     implementation 'org.openjfx:javafx-base:17'
-    implementation 'org.json:json:20210307'
+    implementation 'org.json:json:20231013'
+    implementation 'org.openjfx:javafx-controls:17.0.1'
+    implementation 'org.openjfx:javafx-fxml:17.0.1'
+    implementation 'org.openjfx:javafx-graphics:17.0.1'
+    implementation 'org.openjfx:javafx-media:17.0.1'
+    implementation 'org.openjfx:javafx-swing:17.0.1'
+    implementation 'org.openjfx:javafx-web:17.0.1'
     testImplementation(platform('org.junit:junit-bom:5.10.1')) {
         exclude group: 'org.hamcrest', module: 'hamcrest-core'
     }
@@ -65,6 +74,14 @@ dependencies {
     }
 }
 
+
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'my-application'
+        jvmArgs = ['-Dprism.order=sw']
+    }
+}
 
 
 test {
@@ -81,6 +98,7 @@ compileJava {
                 '--module-path', classpath.asPath,
                 '--add-modules', 'javafx.controls',
                 '--add-modules', 'javafx.fxml',
+                '--add-modules', 'org.json'
         ]
         classpath = files()
     }
@@ -112,3 +130,14 @@ testlogger {
     showSkippedStandardStreams true
     showFailedStandardStreams true
 }
+
+shadowJar {
+    archiveBaseName.set('my-application')
+    archiveVersion.set('1.0.0')
+    archiveClassifier.set('')
+    mergeServiceFiles()
+    manifest {
+        attributes 'Main-Class': 'eu.telecomnancy.labfx.Main'
+    }
+}
+
